tests/ui/diagnostic-not-implemented.msrv.stderr
error[E0405]: cannot find trait `IntoBytes` in this scope
  --> $DIR/diagnostic-not-implemented.rs:44:24
   |
44 | fn takes_into_bytes<T: IntoBytes>() {}
   |                        ^^^^^^^^^ not found in this scope
   |
help: consider importing one of these items
   |
11 | use zerocopy::IntoBytes;
   |
11 | use zerocopy_renamed::IntoBytes;
   |

error[E0405]: cannot find trait `IntoBytes` in this scope
  --> $DIR/diagnostic-not-implemented.rs:95:37
   |
95 |         fn write_obj<T: Immutable + IntoBytes>(&mut self, _val: T) {}
   |                                     ^^^^^^^^^ not found in this scope
   |
help: consider importing one of these items
   |
11 | use zerocopy::IntoBytes;
   |
11 | use zerocopy_renamed::IntoBytes;
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0405`.
